chore: Change application description

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta name="author" content="chick_0" />
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, shrink-to-fit=no" />
         <meta name="keywords" content="to-do.kr, 할 일, 할일" />
-        <meta name="description" content="To-Do는 웹에서 사용하는 간단한 할 일 목록 웹 애플리케이션입니다." />
+        <meta name="description" content="To-Do는 간단한 할 일 목록 웹 애플리케이션입니다." />
         <meta name="theme-color" content="#FFCC4D" />
         <meta property="og:type" content="website" />
         <meta property="og:locale" content="ko_KR" />
         <meta property="og:title" content="To-Do" />
-        <meta property="og:description" content="To-Do는 웹에서 사용하는 간단한 할 일 목록 웹 애플리케이션입니다." />
+        <meta property="og:description" content="To-Do는 간단한 할 일 목록 웹 애플리케이션입니다." />
         <link rel="canonical" href="https://to-do.kr" />
         <title>To-do</title>
     </head>
