--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <meta property="og:title" content="To-Do" />
         <meta property="og:description" content="To-Do는 간단한 할 일 목록 웹 애플리케이션입니다." />
         <link rel="canonical" href="https://to-do.kr" />
+        <link rel="icon" type="image/png" href="/icons/192.png" sizes="192x192" />
+        <link rel="apple-touch-icon" sizes="192x192" href="/icons/192.png" />
+        <link rel="apple-touch-icon" sizes="256x256" href="/icons/256.png" />
+        <link rel="apple-touch-icon" sizes="512x512" href="/icons/512.png" />
         <title>To-do</title>
     </head>
     <body>
