chore: Import css from local and add to precache list

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <link rel="apple-touch-icon" sizes="256x256" href="/icons/256.png" />
         <link rel="apple-touch-icon" sizes="512x512" href="/icons/512.png" />
         <link rel="manifest" href="/manifest.json" />
+        <link rel="stylesheet" href="/minireset.min.css" />
+        <link rel="stylesheet" href="/Pretendard.css" />
         <title>To-do</title>
     </head>
     <body>
