--- a/public/cache.html
+++ b/public/cache.html
@@ -5,8 +5,10 @@
         <meta name="robots" content="noindex,nofollow" />
         <meta name="author" content="chick_0" />
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, shrink-to-fit=no" />
+        <link rel="icon" type="image/png" href="/icons/192.png" sizes="192x192" />
+        <link rel="stylesheet" href="/minireset.min.css" />
+        <link rel="stylesheet" href="/Pretendard.css" />
         <title>캐시 관리자</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css" />
         <style>
             :root {
                 --background: #141414;
