feat: Remove empty CacheStorage when check in cache.html

--- a/public/cache.html
+++ b/public/cache.html
@@ -125,6 +125,10 @@
                                     item_display.innerText = item.url.replace(location.origin, "");
                                     itmes_display.appendChild(item_display);
                                 });
+
+                                if (items.length == 0) {
+                                    caches.delete(key);
+                                }
                             });
                         });
 
