chore: Create Color code css for cache manager and 404 page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link rel="apple-touch-icon" sizes="512x512" href="/icons/512.png" />
         <link rel="manifest" href="/manifest.json" />
         <link rel="stylesheet" href="/minireset.min.css" />
+        <link rel="stylesheet" href="/Color.css" />
         <link rel="stylesheet" href="/Pretendard.css" />
         <title>To-do</title>
     </head>
