--- a/public/cache.html
+++ b/public/cache.html
@@ -5,23 +5,13 @@
         <meta name="robots" content="noindex, nofollow" />
         <meta name="author" content="chick_0" />
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, shrink-to-fit=no" />
+        <meta name="theme-color" content="#141414" />
         <link rel="icon" type="image/png" href="/icons/192.png" sizes="192x192" />
         <link rel="stylesheet" href="/minireset.min.css" />
+        <link rel="stylesheet" href="/Color.css" />
         <link rel="stylesheet" href="/Pretendard.css" />
         <title>캐시 관리자</title>
         <style>
-            :root {
-                --background: #141414;
-                --color: #fff;
-            }
-
-            @media (prefers-color-scheme: light) {
-                :root {
-                    --background: #fff;
-                    --color: #000;
-                }
-            }
-
             html {
                 font-family: Pretendard, -apple-system, system-ui, Roboto, sans-serif;
                 font-size: 22px;
